--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,15 @@
     "es5-shim": "~2.1.0",
     "angular-resource": "~1.2.0",
     "angular-sanitize": "~1.2.0",
-    "angular-route": "~1.2.0"
+    "angular-route": "~1.2.0",
+    "AngularJS-Toaster": "*",
+    "angular-ui-router": "~0.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
     "angular-scenario": "~1.2.0"
+  },
+  "resolutions": {
+    "angular": "1.2.2"
   }
 }
