Socket.io Persistence - Realtime Updates

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "express": "~3.4.3",
     "mongoose": "~3.5.5",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "socket.io": "~0.9.16"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
