--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "~1.2.0",
     "AngularJS-Toaster": "*",
     "angular-ui-router": "~0.2.0",
-    "angular-animate": "~1.2.2"
+    "angular-animate": "~1.2.2",
+    "bootstrap": "~3.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
