--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "blimpIO",
-  "version": "0.0.0",
+  "name": "blimp-io",
+  "version": "0.0.1",
   "dependencies": {
     "express": "~3.4.3",
     "mongoose": "~3.5.5",
