--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "express": "~3.4.3",
     "mongoose": "~3.5.5",
     "async": "~0.2.9",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "passport-local": "~0.1.6",
+    "passport": "~0.1.17",
+    "bcrypt": "~0.7.7"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
