--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.2.0",
-    "time-grunt": "~0.2.1"
+    "time-grunt": "~0.2.1",
+    "bower": "~1.2.7",
+    "grunt-cli": "~0.1.11"
   },
   "devDependencies": {
     "grunt-express-server": "~0.4.5",
@@ -51,6 +53,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "postinstall": "build echo postinstall time; ./node_modules/bower/bin/bower install; ./node_modules/grunt/bin/grunt build"
   }
+
 }
