--- a/bower.json
+++ b/bower.json
@@ -7,17 +7,20 @@
     "es5-shim": "~2.1.0",
     "angular-resource": "~1.2.0",
     "angular-sanitize": "~1.2.0",
-    "angular-route": "~1.2.0",
-    "AngularJS-Toaster": "*",
-    "angular-ui-router": "~0.2.0",
     "angular-animate": "~1.2.2",
-    "bootstrap": "~3.0.2"
+    "angular-route": "~1.2.0",
+    "angular-ui-router": "~0.2.0",
+    "angular-socket-io": "~0.2.0",
+    "AngularJS-Toaster": "*",
+    "bootstrap": "~3.0.2",
+    "lodash": "~2.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
     "angular-scenario": "~1.2.0"
   },
   "resolutions": {
-    "angular": "1.2.2"
+    "angular": "1.2.2",
+    "lodash": "~2.4.0"
   }
 }
