--- a/bower.json
+++ b/bower.json
@@ -2,13 +2,13 @@
   "name": "blimp-io",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "~1.2.0",
+    "angular": "~1.2.3",
     "json3": "~3.2.4",
     "es5-shim": "~2.1.0",
-    "angular-resource": "~1.2.0",
-    "angular-sanitize": "~1.2.0",
-    "angular-animate": "~1.2.2",
-    "angular-route": "~1.2.0",
+    "angular-resource": "~1.2.3",
+    "angular-sanitize": "~1.2.3",
+    "angular-animate": "~1.2.3",
+    "angular-route": "~1.2.3",
     "angular-ui-router": "~0.2.0",
     "angular-socket-io": "~0.2.0",
     "AngularJS-Toaster": "*",
@@ -16,11 +16,10 @@
     "lodash": "~2.4.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.0",
-    "angular-scenario": "~1.2.0"
+    "angular-mocks": "~1.2.3",
+    "angular-scenario": "~1.2.3"
   },
   "resolutions": {
-    "angular": "1.2.2",
-    "lodash": "~2.4.0"
+    "angular": "1.2.3"
   }
 }
