--- a/bower.json
+++ b/bower.json
@@ -13,13 +13,15 @@
     "angular-socket-io": "~0.2.0",
     "AngularJS-Toaster": "*",
     "bootstrap": "~3.0.2",
-    "lodash": "~2.4.0"
+    "lodash": "~2.4.0",
+    "restangular": "~1.1.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.3",
     "angular-scenario": "~1.2.3"
   },
   "resolutions": {
-    "angular": "1.2.3"
+    "angular": "~1.2.3",
+    "lodash": "~2.4.0"
   }
 }
