--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "AngularJS-Toaster": "*",
     "bootstrap": "~3.0.2",
     "lodash": "~2.4.0",
-    "restangular": "~1.1.8"
+    "restangular": "~1.1.8",
+    "angular-highlightjs": "~0.1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.3",
