--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "karma-ng-html2js-preprocessor": "~0.1.0"
   },
   "engines": {
-    "node": ">=0.10.22"
+    "node": "0.10.x",
+    "npm":  "1.3.x"
   },
   "scripts": {
     "test": "grunt test",
