--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "karma-ng-html2js-preprocessor": "~0.1.0"
   },
   "engines": {
-    "node": "~0.10.21",
-    "npm": "~1.3.11"
+    "node": "0.10.21",
+    "npm": "1.3.11"
   },
   "scripts": {
     "test": "grunt test",
