--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,10 @@
     "bootstrap": "~3.0.2",
     "lodash": "~2.4.0",
     "restangular": "~1.1.8",
-    "angular-highlightjs": "~0.1.3"
+    "angular-highlightjs": "~0.1.3",
+    "jquery": "~2.0.3",
+    "highcharts": "~3.0.7",
+    "highcharts-ng": "~0.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.3",
