--- a/bower.json
+++ b/bower.json
@@ -2,30 +2,30 @@
   "name": "blimp-io",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "~1.2.3",
-    "json3": "~3.2.4",
-    "es5-shim": "~2.1.0",
-    "angular-resource": "~1.2.3",
-    "angular-sanitize": "~1.2.3",
-    "angular-animate": "~1.2.3",
-    "angular-route": "~1.2.3",
-    "angular-ui-router": "~0.2.0",
-    "angular-socket-io": "~0.2.0",
+    "angular": "1.2.8",
+    "json3": "3.2.4",
+    "es5-shim": "2.1.0",
+    "angular-resource": "1.2.8",
+    "angular-sanitize": "1.2.8",
+    "angular-animate": "1.2.8",
+    "angular-route": "1.2.8",
+    "angular-ui-router": "0.2.0",
+    "angular-socket-io": "0.2.0",
     "AngularJS-Toaster": "*",
-    "bootstrap": "~3.0.2",
-    "lodash": "~2.4.0",
-    "restangular": "~1.1.8",
-    "angular-highlightjs": "~0.1.3",
-    "jquery": "~2.0.3",
-    "highcharts": "~3.0.7",
-    "highcharts-ng": "~0.0.2"
+    "bootstrap": "3.0.2",
+    "lodash": "2.4.0",
+    "restangular": "1.1.8",
+    "angular-highlightjs": "0.1.3",
+    "jquery": "2.0.3",
+    "highcharts": "3.0.7",
+    "highcharts-ng": "0.0.2"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.3",
-    "angular-scenario": "~1.2.3"
+    "angular-mocks": "1.2.3",
+    "angular-scenario": "1.2.3"
   },
   "resolutions": {
-    "angular": "~1.2.3",
-    "lodash": "~2.4.0"
+    "lodash": "2.4.0",
+    "angular": "1.2.8"
   }
 }
